fabrik/internal/engine/testdata/jobs_cron_duplicate.txt
A cron name is schedule identity. The generator has every //fabrik:cron
name statically, so two crons sharing a name are a wire-time error rather
than a late failure in the generated app's RegisterCron call.
-- go.mod --
module app

go 1.26

require github.com/gofabrik/fabrik/cli v0.0.0

replace github.com/gofabrik/fabrik/cli => CLIDIR

require github.com/gofabrik/fabrik/jobs v0.0.0

replace github.com/gofabrik/fabrik/jobs => JOBSDIR
-- main.go --
package main

import "os"

func main() { os.Exit(run()) }
-- shared/shared.go --
package shared

import (
	"github.com/gofabrik/fabrik/jobs"

	"github.com/gofabrik/fabrik/cli"
)

//fabrik:provider
func NewJobStore() (jobs.Store, error) { return jobs.NewMemoryStore(), nil }

//fabrik:cli:command
func Boot(ctx cli.Context, mgr *jobs.Manager) error { return nil }
-- cleanup/cleanup.go --
package cleanup

import "context"

//fabrik:cron name=nightly schedule="0 3 * * *"
func PurgeOld(ctx context.Context) error { return nil }

//fabrik:cron name=nightly schedule="0 4 * * *"
func PurgeTemp(ctx context.Context) error { return nil }
-- want/diags --
error: cleanup/cleanup.go:8:1: duplicate //fabrik:cron name "nightly" (also at $WORK/cleanup/cleanup.go:5:1)
